Revise author information in _config.yml
Updated author details including name, bio, email, and various URLs.

--- a/_config.yml
+++ b/_config.yml
@@ -24,24 +24,24 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Salim"
+  name             : "Salim Hafid"
   pronouns         : # example: "she/her"  
-  bio              : "Post-doctoral researcher @medialab @Sciences Po Paris (Paris Institute of Political Studies)"
+  bio              : "Post-doctoral researcher \n @medialab @Sciences Po Paris \n (Paris Institute of Political Studies)"
   location         : "Paris, France"
   employer         : "Sciences Po"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "salim.hafid@proton.me" 
 
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=yGhut3QAAAAJ&hl=fr&oi=ao"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "https://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0002-1775-8542"
   semantic         : # URL
   ssrn             : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
   scopus           : # URL
   zotero           : # URL
@@ -51,7 +51,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "SalimHFX"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
