Revise navigation titles and add funded projects
Updated navigation titles for clarity and added a new entry for funded projects.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,17 +11,20 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Invited Talks"
     url: /talks/    
 
-  - title: "Teaching"
+  - title: "Teaching & Workshops"
     url: /teaching/    
+
+  - title: "Funded Projects"
+    url: /projects/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+ # - title: "Portfolio"
+ #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+ # - title: "Blog Posts"
+ #   url: /year-archive/
     
   - title: "CV"
     url: /cv/
