Add jekyll-last-modified-at plugin configuration
Add jekyll-last-modified-at plugin with date format.

--- a/_config.yml
+++ b/_config.yml
@@ -313,6 +313,11 @@ plugins:
   - jekyll-sitemap
   - jekyll-redirect-from
   - jemoji
+  - jekyll-last-modified-at
+
+# Optional. The default date format, used if none is specified in the tag.
+last-modified-at:
+    date-format: '%d-%b-%y'
 
 # Mimic GitHub Pages with --safe
 whitelist:
