Rename 'Invited Talks' to 'Talks & Press'

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Invited Talks"
+  - title: "Talks & Press"
     url: /talks/    
 
   - title: "Teaching & Workshops"
